--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<div class="container">
 			<header class="header">
 				<div class="header__block">
-					<p class="header__block--small">ကိုအောင်ဌေး</p>
-					<p class="header__block--hero">Grand Hantha ဟင်္သာတခရိုင် ကိုယ်စားလှယ်</p>
+					<p class="header__block--small">ကိုငြိမ်းမောင်</p>
+					<p class="header__block--hero">Hospital မြန်မာနိုင်ငံ ကိုယ်စားလှယ်</p>
 					<nav>
 						<ul>
 							<li class="active"><a href="#">Patient Register Form</a></li>
