final touch to contact page

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Ko Aung Htay | Contact</title>
 		<link rel="stylesheet" href="assets/css/style.css">
+		<link rel="stylesheet" href="assets/css/media-queries.css">
 	</head>
 
 	<body>
@@ -18,7 +19,7 @@
 					</p>
 					<nav>
 						<ul>
-							<li><a href="index.html">Patient Register Form</a></li>
+							<li><a href="home.html">Patient Register Form</a></li>
 							<li class="active"><a href="#">Contact</a></li>
 						</ul>
 					</nav>
